# classic-factors

./: .gitignore  README.md  pyproject.toml
docs/: README.zh-TW.md
notebooks/: 01_momentum.ipynb  02_reversal.ipynb  99_summary.ipynb
scripts/: download_data.py
src/factors/: __init__.py  signals.py
